--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -1,7 +1,7 @@
 
 
 
-<div id="memberships" class="page-scroll col-lg-12" style="padding: 5% 5%; margin: 0px; background: url(/img/backgrounds/mac-w-lq.jpg) no-repeat center center;   background-size: cover; 
+<div id="mix-feedback" class="page-scroll col-lg-12" style="padding: 5% 5%; margin: 0px; background: url(/img/backgrounds/mac-w-lq.jpg) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 <div class="row" >
 
@@ -16,13 +16,13 @@
 
   <p style="font-size: 16px; color: #333; text-shadow: 0px 0px 10px #ccc;"><br>
 
-    Do you want your mastering engineer with you every step of the way? Mix Feedback, available on any level membership plan, gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
+    Amazing music doesn't start at the mastering stage. That is why we offer Mix Feedback, giving you access to your mastering engineer during your mixing process.
     <br>
     <br>
-    Mix Feedback goes a little something like this: you send us a mix, and we recommend solutions to any issues you might be unhappy with. For example, if your vocal compression seems a little off, we can suggest control values on a specific compressor plug-in you might be using. Your mastering engineer will also tailor this advice to your skill level, so don't worry about feeling patronized (or jargon-ized).
+    Signing up as a Mix Feedback member lets you enjoy the detailed assistance of your mastering engineer with any mix level issues you are having before the mastering stage, along with their professional opinion of your mix. This additional stage in the mastering process is a win-win: you get to stay in control and hone your mixing and recording skills, while we get to give you the absolute best master possible.
     <br>
     <br>
-     In addition to your monthly Mix Feedbacks, we give our members complimentary Mix Feedback for anything you have your engineer master. Examples of mix feedback are coming to our website soon.
+    While we launch, try us out with your first month free, and receive free Mix Feedback with every master. Start learning from professionals today!
   </div>
 
    <div class="col-md-1">
@@ -32,25 +32,15 @@
 
    <div class="col-md-5 col-xs-12" style="padding: 0%; position: relative;">
 
-  <div class="col-xs-4" style="padding: 1% 4%; position: relative;">
-    <img src="/img/rates/rates-panel-budget.png" alt="value" width="100%">
-    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/budget/">Start</a>
-  </div>
+  <!-- <div class="col-xs-4" style="padding: 1% 4%; position: relative;"> -->
+    <img src="/img/rates/mix-feedback-panel.jpg" alt="value" width="60%">
+    <a class="btn btn-default" style="width: 60%; background: #777; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/mix-feedback/">Start</a>
+  <!-- </div> -->
 
 <!--   <div class="col-xs-3" style="padding: 1% 2%; position: relative;">
     <img src="/img/rates/rates-panel-basic.png" alt="value" width="100%">
     <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/">Start</a>
   </div> -->
-
-  <div class="col-xs-4" style="padding: 1% 4%; position: relative;">
-    <img src="/img/rates/rates-panel-value.png" alt="value" width="100%">
-    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/value/">Start</a>
-  </div>
-
-  <div class="col-xs-4" style="padding: 1% 4%; position: relative;">
-    <img src="/img/rates/rates-panel-pro.png" alt="value" width="100%">
-    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/pro/">Start</a>
-  </div>
 
   </div>
 
@@ -60,19 +50,19 @@
  </div> -->
 
  <div class="col-md-5 col-xs-12 hidden-xs hidden-sm" style="padding: 2% 2%; margin: 0% 0% 2% 2%;">
-  <h1 style="color: #333; margin-bottom: 5px;">Our Memberships</h1>
+  <h1 style="color: #333; margin-bottom: 5px;">Mix Feedback</h1>
 
  <!--  <img src="/img/icons/mix-icon.png"> -->
 
   <p style="font-size: 16px; color: #333;"><br>
 
-    Do you want your mastering engineer with you every step of the way? Mix Feedback, available on any level membership plan, gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
+    Amazing music doesn't start at the mastering stage. That is why we offer Mix Feedback, giving you access to your mastering engineer during your mixing process.
     <br>
     <br>
-    Mix Feedback goes a little something like this: you send us a mix, and we recommend solutions to any issues we hear. For example, if your vocal compression seems a little off, we can suggest control values on a specific compressor plug-in you might be using. Your mastering engineer will also tailor this advice to your skill level, so don't worry about feeling patronized (or jargon-ized).
+    Signing up as a Mix Feedback member lets you enjoy the detailed assistance of your mastering engineer with any mix level issues you are having before the mastering stage, along with their professional opinion of your mix. This additional stage in the mastering process is a win-win: you get to stay in control and hone your mixing and recording skills, while we get to give you the absolute best master possible.
     <br>
     <br>
-    Our members get Mix Feedback free with every master, so that we can identify and fix any mix-level issues before we master your track. Each tier also includes a certain amount of Mix Feedbacks monthly, which you can use for help during your recording and mixing process when things aren't sounding quite right.
+    While we launch, try us out with your first month free, and receive free Mix Feedback with every master. Start learning from professionals today!
   </div>
 
 
