--- a/_includes/rates.html
+++ b/_includes/rates.html
@@ -1,6 +1,6 @@
 
 
-<div id="rates" class="page-scroll col-lg-12" style="padding: 5% 5%; margin: 0px; background: url(/img/backgrounds/phones-b-lq.jpg) no-repeat center center;   background-size: cover; 
+<div id="mastering" class="page-scroll col-lg-12" style="padding: 5% 5%; margin: 0px; background: url(/img/backgrounds/phones-b-lq.jpg) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 <div class="row" >
 
@@ -8,18 +8,15 @@
  </div>
 
  <div class="col-md-5" style="padding: 2% 4%; margin: 0% 0% 2% 0%;">
- 	<h1 style="margin-bottom: 5px; color: #eee;">Our Mastering Rates</h1>
+ 	<h1 style="margin-bottom: 5px; color: #eee;">Mastering</h1>
  	<!-- <img src="/img/icons/master-icon.png"> -->
 
  	<p style="font-size: 16px; color: #eee;"><br>
- 		In addition to your <a href="#free">first master free</a>, <b>we give our clients another free master credit with every three paid masters</b>, just for sticking with us. Plus, our rates are the best value for your dollar that you will find anywhere.
- 		<br>
- 		<br>
- 		With Get Mastered, you don't just get a master; you get a personal mastering engineer who will work with you to make your music the best it can be. In addition to making your tracks louder, your albums cohesive, and your songs ready for commercial release, our engineers take pride in artistically enhancing your track in a way that reflects your style. Your engineer at Get Mastered will get to know your tastes, and get you closer to the sounds and artists you admire.
+ 		With Get Mastered, you don't just get a master. You get a personal mastering engineer who will work with you to make your music the best it can be. In addition to making your tracks louder, your albums cohesive, and your songs ready for release, our engineers take pride in artistically enhancing your track to fit your unique style and tastes.
 		<br>
 		<br>
-		Our turnaround times are <i>absolute maximums</i>; we often return masters earlier than our listed turnaround times. That being said, we don't rush quality. If you absolutely need a rush job, let your engineer know; we are happy to work with you to the best of our abilities at no extra cost.
-		<!-- Towards this effort, we also offer Mix Feedback to our subscription members, free with every master. Great music of course starts at the mix level, and becoming a member gives you access to experienced ears during your recording and mixing process.<a href="/#memberships">Scroll for more about becoming a member</a> --></p>
+		We don't rush quality. We take time to listen to and understand your track, so that we can bring it to its full potential. However, if you absolutely need a rush job, we are happy to work with you at no extra cost.
+		</p>
  </div>
 <!-- 
       <div class="col-xs-2">
@@ -28,17 +25,17 @@
   <div class="col-md-5 col-xs-12" style="padding: 0% 2%; position: relative;">
 
   	<div class="col-xs-4" style="padding: 0% 4%; position: relative;">
-		<img src="/img/rates/rates-single.png" width="100%">
+		<img src="/img/rates/mastering-single-panel.jpg" width="100%">
 		<!-- <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/payment/">Choose</a> -->
 	</div>
 
 	<div class="col-xs-4" style="padding: 0% 4%; position: relative;">
-		<img src="/img/rates/rates-ep.png" width="100%">
+		<img src="/img/rates/mastering-ep-panel.jpg" width="100%">
 		<!-- <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/payment/">Choose</a> -->
 	</div>
 
 	<div class="col-xs-4" style="padding: 0% 4%; position: relative;">
-		<img src="/img/rates/rates-album.png" width="100%">
+		<img src="/img/rates/mastering-album-panel.jpg" width="100%">
 		<!-- <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/payment/">Choose</a> -->
 	</div>
 	<a class="btn btn-skin" style="width: 92%; font-size: 24px; margin: 8% 2%; padding: 4% 4%;" href="/payment/">Calculate your price</a>
