--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -50,8 +50,8 @@
             <div class="collapse navbar-collapse navbar-left navbar-main-collapse col-lg-9">
       <ul class="nav navbar-nav" style="text-align: left; padding-left: 0px;">
         <li><a href="#about">About</a></li>
-        <li><a href="#rates">Rates</a></li>
-       <li><a href="#memberships">Memberships</a></li>
+        <li><a href="#mastering">Mastering</a></li>
+       <li><a href="#mix-feedback">Mix Feedback</a></li>
         <li><a href="#reviews">Reviews</a></li>
         <li><a href="/examples/">Examples</a></li>
         <li><a href="/payment/">Submit</a></li>
