--- a/_includes/footer-splash.html
+++ b/_includes/footer-splash.html
@@ -3,7 +3,7 @@
 
     </div>
 
-    <div class="col-lg-12 bg-white">
+    <div class="col-lg-12 bg-gray">
       <div class="row-fluid" style="text-align: center; padding: 3% 5%;">
 
         <h3 style="color: #777; display: inline; font-size: 16px;">
@@ -12,17 +12,17 @@
 
 <br>
 <br>
-<a target="_blank" href="http://www.facebook.com/getmastered" style="padding: 0% 1.5%;"> <img class="social" src="/img/social-media/Button-FB-trans.png" width="25px" height="25px"> </a>
+<a target="_blank" href="http://www.facebook.com/getmastered" style="padding: 0% 1.5%;"> <img class="social" src="/img/social-media/Button-FB-trans-g.png" width="25px" height="25px"> </a>
 
-<a target="_blank" href="http://www.instagram.com/getmastereddeals" style="padding: 0% 1.5%;"> <img class="social" src="/img/social-media/Button-Insta-trans.png" width="22px" height="22px"> </a>
+<a target="_blank" href="http://www.instagram.com/getmastereddeals" style="padding: 0% 1.5%;"> <img class="social" src="/img/social-media/Button-Insta-trans-g.png" width="22px" height="22px"> </a>
 
-<a target="_blank" href="http://www.soundcloud.com/getmastered" style="padding: 0% 1.5%;"> <img class="social" src="/img/social-media/Button-SC-trans.png" width="45px" height="22px"> </a>
+<a target="_blank" href="http://www.soundcloud.com/getmastered" style="padding: 0% 1.5%;"> <img class="social" src="/img/social-media/Button-SC-trans-g.png" width="45px" height="22px"> </a>
 
-<a target="_blank" href="http://www.twitter.com/getmastered" style="padding: 0% 1.5%;"> <img class="social" src="/img/social-media/Button-Twit-trans.png" width="25px" height="25px"> </a>
+<a target="_blank" href="http://www.twitter.com/getmastered" style="padding: 0% 1.5%;"> <img class="social" src="/img/social-media/Button-Twit-trans-g.png" width="25px" height="25px"> </a>
 
 <br>
 <br>
-<p style="font-size: 14px; color: #aaa;"><b><a href="/contact/">contact</a> - <a href="/#faq">FAQ</a> - <a href="/blog/">blog</a></b></p>
+<p style="font-size: 14px; color: #aaa;"><b><a href="/contact/">contact</a> - <a href="/payment/">submit</a> - <a href="/blog/">blog</a></b></p>
 
 
       </div>
