--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -13,8 +13,8 @@
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-    <!-- Fonts -->
-    <!-- <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
+    <!-- Need for mobile nav collapse -->
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> 
       <!-- <link href="/css/animate.css" rel="stylesheet" /> -->
     <!-- CSS -->
     <link href="/css/style.css" rel="stylesheet">
@@ -54,12 +54,12 @@
        <li><a href="#mix-feedback">Mix Feedback</a></li>
         <li><a href="#reviews">Reviews</a></li>
         <li><a href="/examples/">Examples</a></li>
-        <li><a href="/payment/">Submit</a></li>
+        <li class="active"><a href="/blog/">Blog</a></li>
+        <!-- <li><a href="/payment/">Submit</a></li> -->
        <li><a href="/login/">Login</a></li>
         <!-- <li><a href="/subscriptions/">Subscribe</a></li> -->
         <!-- <li class="hidden-lg hidden-xl"><a href="/contact/">Contact</a></li> -->
         <!-- <li class="hidden-sm hidden-xs hidden-md"><a href="/blog/">Blog</a></li> -->
-        <!-- <li class="active"><a href="/blog/">Blog</a></li> -->
         <!-- <li><a href="/archive/">Post Archive</a></li> -->
       </ul>
 
