--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,12 +13,12 @@
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-    <!-- Fonts -->
-<!--     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-      <link href="/css/animate.css" rel="stylesheet" /> -->
+    <!-- Need for mobile nav collapse  -->
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+      <!-- <link href="/css/animate.css" rel="stylesheet" /> -->
     <!-- CSS -->
     <link href="/css/style.css" rel="stylesheet">
-<!--       <link href="/color/default.css" rel="stylesheet">   --> 
+      <!-- <link href="/color/default.css" rel="stylesheet">    -->
 
   </head>
 
@@ -54,13 +54,13 @@
         <li><a href="/#mix-feedback">Mix Feedback</a></li>
         <li><a href="/#reviews">Reviews</a></li>
         <li><a href="/examples/">Examples</a></li>
-        <li><a href="/payment/">Submit</a></li>
+        <!-- <li><a href="/payment/">Submit</a></li> -->
+        <li class="active"><a href="/blog/">Blog</a></li>
         <li><a href="/login/">Login</a></li>
         <!-- <li><a href="/subscriptions/">Subscribe</a></li> -->
         <!-- <li class="hidden-sm hidden-xs hidden-md"><a href="/submit/mastering/">Submit</a></li> -->
         <!-- <li class="hidden-lg hidden-xl"><a href="/contact/">Contact</a></li> -->
         <!-- <li class="hidden-sm hidden-xs hidden-md"><a href="/blog/">Blog</a></li> -->
-        <!-- <li class="active"><a href="/blog/">Blog</a></li> -->
         <!-- <li><a href="/archive/">Post Archive</a></li> -->
       </ul>
 
