--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -1,6 +1,6 @@
 
 
-<div id="reviews" class="col-lg-12 bg-gray" style="padding: 5% 15%; margin: 0px;">
+<div id="reviews" class="col-lg-12 bg-white" style="padding: 5% 15%; margin: 0px;">
 <div class="row-fluid">
 
 
