--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 
 <div style="padding: 0px; margin: 0px;">
   <div class="col-lg-3 sidebar hidden-md hidden-sm hidden-xs" style="padding: 0px; margin: 0px;">
-    <div data-spy="affix" data-offset-top="0" style="padding: 0px 30px 0px 0px;">
+    <div data-spy="affix" data-offset-top="0" style="padding: 0px 30px 0px 0px; margin-top: -17px;">
     <div>
       {% include sidebar.html %}
     </div>
@@ -10,11 +10,11 @@
     </div>
   </div>
   <div class="col-lg-9" style="padding-top: 0px; padding-left: 20px; padding-right: 20px;">
-    <div class="row-fluid bg-white hidden-md hidden-sm hidden-xs" style="padding: 90px 30px 0px 0px; position: fixed; width: 100%;">
-      <!-- <div data-spy="affix" data-offset-top="0" style="padding: 0px 30px 0px 0px;"> -->
-      <h4 style="color: #ccc; text-transform: uppercase;"> 
+    <div class="row-fluid bg-white hidden-md hidden-sm hidden-xs" style="padding: 80px 30px 0px 0px; position: fixed; width: 100%; z-index: 1; ">
+      <h5 style="color: #ccc; text-transform: uppercase;"> 
+        <a class="master-color-light" href="/blog/">BLOG HOME</a>
         {% if page.previous.title != null %}
-        Go Back:
+         | Go Back:
         <a class="master-color-light" href="{{ page.previous.url }}">{{ page.previous.title }}</a>
         {% endif %}
         {% if page.previous.title != null %}
@@ -23,71 +23,61 @@
         {% endif %}
         {% endif %}
         {% if page.next.title != null %}
-        Next Up:
+         | Next Up:
         <a class="master-color-light" href="{{ page.next.url }}">{{ page.next.title }}</a> 
         {% endif %}
-      </h4>
+      </h5>
     </div>
 
-    <div class="row-fluid bg-white hidden-lg hidden-xl" style="padding: 90px 30px 0px 0px; position: fixed; width: 100%;">
-      <!-- <div data-spy="affix" data-offset-top="0" style="padding: 0px 30px 0px 0px;"> -->
-      <h4 style="color: #ccc;" style="font-size: 2vw;"> 
+    <div class="row-fluid bg-white hidden-lg hidden-xl" style="padding: 80px 30px 0px 0px; position: fixed; width: 100%; z-index: 1;">
+      <h5 style="color: #ccc; text-transform: uppercase;" style="font-size: 2vw;"> 
+      <a class="master-color-light" href="/blog/">BLOG HOME</a>
         {% if page.previous.title != null %}
-        Go Back:
+         | Go Back:
         <a class="master-color-light" href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
         {% endif %}
-        {% if page.previous.title != null %}
+        {% if page.previous.title == null %}
         {% if page.next.title != null %}
           
         {% endif %}
         {% endif %}
         {% if page.next.title != null %}
-        Next Up:
+         | Next Up:
         <a class="master-color-light" href="{{ page.next.url }}">{{ page.next.title }} ></a> 
         {% endif %}
-      </h4>
+      </h5>
     </div>
 
     <div class="row-fluid bg-white" style="padding: 60px 0px;">
     </div>
-  <!-- </div> -->
-    {% if page.cover != "off" %}
-    <div class="row-fluid" style="background: url({{ page.cover-blur }}) no-repeat top left; background-attachment: fixed; background-size: cover;">
-      
-    <!-- <div class="wow fadeInUp" data-wow-delay="0.8s"> -->
-    
-    <div class="row-fluid" style="padding: 80px 20px 10px 40px;">
-      <h3 class="text-gray hidden-lg hidden-xl" style="font-size: 100%; text-transform: uppercase;">{{ page.subtitle }}</h3>
-      <h3 class="text-gray hidden-md hidden-sm hidden-xs" style="font-size: 160%; text-transform: uppercase;">{{ page.subtitle }}</h3>
-      <h1 class="{{ page.color }} hidden-lg hidden-xl" style="font-size: 11vw; text-transform: uppercase;">{{ page.title }}</h1>
-      <h1 class="{{ page.color }} hidden-md hidden-sm hidden-xs" style="font-size: 500%; text-transform: uppercase;">{{ page.title }}</h1>
-    <!-- </div> -->
-  </div>
-<!--     <div>
-        <p style="color: #aaa; font-size: 16px;">{{ page.caption }}</p>
-    </div> -->
-    {% endif %}
-    </div>
 
-<!--     {% if page.soundcloud != "off" %}
+<div class="row-fluid" style="background: url({{ page.cover }}) no-repeat center center;   background-size: cover; padding: 25%; filter        : brightness(50%);
+    -webkit-filter: brightness(50%); z-index: -1;" ></div>
+          <h1 class="hidden-xs hidden-sm hidden-md" style="padding-left: 2%; position: absolute; top: 140px;"><span style="font-size: 20px; color: #aaa; text-transform: uppercase;">{{ page.subtitle }}</span><br><span style="font-size: 200%; text-transform: uppercase; color: #fff;">{{ page.title }}<br><br><br><br></span></h1>
+          <h1 class="hidden-xl hidden-lg"style="padding-left: 2%; position: absolute; top: 140px;"><span style="font-size: 20px; color: #aaa; text-transform: uppercase;">{{ page.subtitle }}</span><br><span style="text-transform: uppercase; color: #fff;">{{ page.title }}<br><br><br><br></span></h1>
+<!-- 
+
     <div class="row-fluid">
-      <iframe width="95%" height="130" scrolling="no" frameborder="no" src={{ page.soundcloud }}></iframe>
-    </div>
-    <div>
-        <p style="color: #aaa; font-size: 16px;">{{ page.caption }}</p>
-    </div>
-    {% endif %} -->
+      <h3 class="text-white hidden-lg hidden-xl" style="color: #{{ page.color-title }}; font-size: 100%; text-transform: uppercase;">{{ page.subtitle }}</h3>
+      <h3 class="text-light hidden-md hidden-sm hidden-xs" style="color: #{{ page.color-title }}; font-size: 160%; text-transform: uppercase;">{{ page.subtitle }}</h3>
+      <h1 class="hidden-lg hidden-xl" style="color: #{{ page.color-title }}; font-size: 11vw; text-transform: uppercase;">{{ page.title }}</h1>
+      <h1 class="hidden-md hidden-sm hidden-xs" style="color: #{{ page.color-title }}; font-size: 500%; text-transform: uppercase;">{{ page.title }}</h1>
+
+    </div> -->
+
+
+
     <div class="row-fluid bg-white">
       <br>
+      <div class="hidden-lg hidden-xl">
       {{ content }}
+      </div>
+      <div class="hidden-md hidden-sm hidden-xs" style="padding-right: 8%;">
+      {{ content }}
+      </div>
       {% include social-media.html %}
       <br>
       <br>
-      <!-- <h4 style="color: #ccc;"> 
-        <a class="master-color-light" href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
-        //
-        <a class="master-color-light" href="{{ page.next.url }}">{{ page.next.title }} ></a> 
-      </h4> -->
       {% include disqus-comments.html %}
     </div>
   </div>
