podcasting, mix feedback price changes

--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -52,6 +52,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#mastering">Mastering</a></li>
        <li><a href="#mix-feedback">Mix Feedback</a></li>
+       <li><a href="#podcasts">Podcasts</a></li>
         <li><a href="#reviews">Reviews</a></li>
         <li><a href="/examples/">Examples</a></li>
         <li class="active"><a href="/blog/">Blog</a></li>
