--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -32,15 +32,15 @@
 
    <div class="col-md-5 col-xs-12" style="padding: 0%; position: relative;">
 
-  <!-- <div class="col-xs-4" style="padding: 1% 4%; position: relative;"> -->
-    <img src="/img/rates/mix-feedback-panel.jpg" alt="value" width="60%">
-    <a class="btn btn-default" style="width: 60%; background: #777; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/mix-feedback/">Start</a>
-  <!-- </div> -->
+  <div class="col-xs-6" style="padding: 1% 4%; position: relative;">
+    <img src="/img/rates/mix-feedback-standard-panel.jpg" alt="value" width="100%">
+    <a class="btn btn-default" style="width: 100%; background: #777; height: 50px; font-size: 18px; padding-top: 10px;" href="/payment/mix-feedback/">Start</a>
+  </div>
 
-<!--   <div class="col-xs-3" style="padding: 1% 2%; position: relative;">
-    <img src="/img/rates/rates-panel-basic.png" alt="value" width="100%">
-    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/">Start</a>
-  </div> -->
+  <div class="col-xs-6" style="padding: 1% 4%; position: relative;">
+    <img src="/img/rates/mix-feedback-plan-panel.jpg" alt="value" width="100%">
+    <a class="btn btn-default" style="width: 100%; background: #777; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/mix-feedback/">Start</a>
+  </div>
 
   </div>
 
