--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,7 +13,7 @@
 </h5>
 
 <p style="color: #999; font-size: 15px; padding-top: 5px;">
-Get Mastered is an audio improvement and mastering service with Mix Feedback - 
+Get Mastered is an audio improvement and mastering service with mix and recording feedback - 
 
 <span><a href="/blog/about/What-Is-Get-Mastered/" style="color: #aaa;">Learn more.</a><br></p>
 
@@ -22,7 +22,7 @@ Get Mastered is an audio improvement and mastering service with Mix Feedback -
     Who Are we?</h5>
 
 <p style="color: #999; font-size: 15px; padding-top: 5px;">
-We are passionate engineers looking to reinvigorate the human side of mastering - 
+We are passionate engineers who believe in amazing sounding audio - 
 <span><a href="/blog/about/Who-We-Are/" style="color: #aaa;">More about us</a>
 <br><br></p>
 
