--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -34,7 +34,7 @@
 
   <div class="col-xs-6" style="padding: 1% 4%; position: relative;">
     <img src="/img/rates/mix-feedback-standard-panel.jpg" alt="value" width="100%">
-    <a class="btn btn-default" style="width: 100%; background: #777; height: 50px; font-size: 18px; padding-top: 10px;" href="/payment/mix-feedback/">Start</a>
+    <a class="btn btn-default" style="width: 100%; background: #777; height: 50px; font-size: 18px; padding-top: 10px;" href="/payment/mix-feedback/">Purchase</a>
   </div>
 
   <div class="col-xs-6" style="padding: 1% 4%; position: relative;">
