--- a/_includes/rates-podcasts.html
+++ b/_includes/rates-podcasts.html
@@ -13,7 +13,7 @@
  	<p style="font-size: 16px; color: #eee;"><br>
  		We also offer audio improvement, mixing, and mastering for podcasts. Whether you want to pay monthly or pay as you go, we will be here with you every step of the way, helping you achieve professional quality audio for your podcast. <br><br>
 
- 		We can help you get those pesky clicks, pops, and hums out of your dialogue, plus, included with our podcast mastering service is complimentary recording feedback, to help you acheive professional quality recordings within your budget. <a href="#free">Try us out with your first podcast master on us</a>.
+ 		We can help you mitigate clicks, pops, and hums in your dialogue, plus, included with our podcast mastering service is complimentary recording assistance. With recording assistance, we offer personalized tips to get you get the best recording possible to help you acheive professional quality recordings within your budget. <a href="#free">Try us out with your first podcast master on us</a>.
 		</p>
  </div>
 <!-- 
