--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,7 +13,7 @@
 </h5>
 
 <p style="color: #999; font-size: 15px; padding-top: 5px;">
-Get Mastered is an audio improvement and mastering service with mix and recording feedback - 
+Get Mastered is an audio consultation and mastering service with mix and recording feedback - 
 
 <span><a href="/blog/about/What-Is-Get-Mastered/" style="color: #aaa;">Learn more.</a><br></p>
 
