--- a/_includes/rates-podcasts.html
+++ b/_includes/rates-podcasts.html
@@ -11,7 +11,7 @@
  	<!-- <img src="/img/icons/master-icon.png"> -->
 
  	<p style="font-size: 16px; color: #eee;"><br>
- 		We also offer audio improvement, mixing, and mastering for podcasts. Whether you want to pay monthly or pay as you go, we will be here with you every step of the way, helping you achieve professional quality audio for your podcast. <br><br>
+ 		We also offer audio improvement and mastering for podcasts. Whether you want to pay monthly or pay as you go, we will be here with you every step of the way, helping you achieve professional quality audio. <br><br>
 
  		We can help you mitigate clicks, pops, and hums in your dialogue, plus, included with our podcast mastering service is complimentary recording assistance. With recording assistance, we offer personalized tips to get you get the best recording possible and acheive professional quality recordings within your budget. <a href="#free">Try us out with your first podcast master on us</a>.
 		</p>
