--- a/_includes/rates.html
+++ b/_includes/rates.html
@@ -15,7 +15,7 @@
  		With Get Mastered, you don't just get a master. You get a personal mastering engineer who will work with you to make your music the best it can be. In addition to making your tracks louder, your albums cohesive, and your songs ready for release, our engineers take pride in artistically enhancing your track to fit your unique style and tastes.
 		<br>
 		<br>
-		We don't rush quality. We take time to listen to and understand your track, so that we can bring it to its full potential. If you do absolutely need a rush job, we are happy to work with you at no extra cost.
+		We don't rush quality. We take time to listen to and understand your track, so that we can bring it to its full potential. If you do absolutely need a rush job, we are happy to work with you at no extra cost. <a href="#free">Try our mastering with your first song free</a>.
 		</p>
  </div>
 
