--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -65,22 +65,22 @@
             <br>
             <br>  
 
-            <i><b>"Loved it!</b> Quick, friendly service and very good results."</i> - Rob Sommerlad‎ 
+            <i><b>"Loved it!</b> Quick, friendly service and very good results."</i> - Rob Sommerlad‎ - 
             
-            <a href="https://www.facebook.com/getmastered/posts/1748983295324815?ref=notif&notif_t=page_wall">[source]</a>
+            <a href="https://www.facebook.com/getmastered/posts/1748983295324815?ref=notif&notif_t=page_wall">from Facebook</a>
             <br>
             <br>
 
 
-            <i>"I absolutely love my finished product from Get Mastered, and I'll be back for work again soon! <b>Thanks for making my music sound better than ever!</b>"</i> - Richard Lathrop
+            <i>"I absolutely love my finished product from Get Mastered, and I'll be back for work again soon! <b>Thanks for making my music sound better than ever!</b>"</i> - Richard Lathrop - 
             
-            <a href="https://www.facebook.com/getmastered/posts/1755223604700784?notif_t=page_wall">[source]</a>
+            <a href="https://www.facebook.com/getmastered/posts/1755223604700784?notif_t=page_wall">from Facebook</a>
             <br>
             <br>
 
-            <i>"Get Mastered is a truly amazing team! My master was delivered quickly and it sounds top notch! I've been able to say how I wanted the song to sound like and the results were beyond my expectations. <b>I didn't think they could make my music sound so professional. Moreover, it's a real pleasure to work with people who really care about their customers!</b>"</i> - Origin-X
+            <i>"Get Mastered is a truly amazing team! My master was delivered quickly and it sounds top notch! I've been able to say how I wanted the song to sound like and the results were beyond my expectations. <b>I didn't think they could make my music sound so professional. Moreover, it's a real pleasure to work with people who really care about their customers!</b>"</i> - Origin-X - 
             
-            <a href="https://www.facebook.com/getmastered/posts/1760121437544334?notif_t=page_wall">[source]</a>
+            <a href="https://www.facebook.com/getmastered/posts/1760121437544334?notif_t=page_wall">from Facebook</a>
             <br>
             <br>
 
