--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -19,10 +19,8 @@
     Amazing music doesn't start at the mastering stage. That is why we offer Mix Feedback, giving you access to your mastering engineer during your mixing process.
     <br>
     <br>
-    Signing up as a Mix Feedback subscriber lets you enjoy the detailed assistance of your mastering engineer with any mix level issues you are having before the mastering stage, along with their professional opinion of your mix. This additional stage in the mastering process is a win-win: you get to stay in control and hone your mixing and recording skills, while we get to give you the absolute best master possible.
-    <br>
-    <br>
-    While we launch, try us out with your first month free, and receive free Mix Feedback with every master. Plus receive one bonus Mix Feedback every month for songs you're not ready to master. Start learning from professionals today!
+    With Mix Feedback, you get the detailed assistance of your mastering engineer with any mix level issues you are having, along with their professional opinion of your mix. This additional stage in the mastering process is a win-win: you get to stay in control and hone your mixing and recording skills, while we get to give you the absolute best master possible. <a href="#free">Try us out, with your first mix feedback free</a>.
+
   </div>
 
    <div class="col-md-1">
@@ -59,10 +57,8 @@
     Amazing music doesn't start at the mastering stage. That is why we offer Mix Feedback, giving you access to your mastering engineer during your mixing process.
     <br>
     <br>
-    Signing up as a Mix Feedback subscriber lets you enjoy the detailed assistance of your mastering engineer with any mix level issues you are having before the mastering stage, along with their professional opinion of your mix. This additional stage in the mastering process is a win-win: you get to stay in control and hone your mixing and recording skills, while we get to give you the absolute best master possible.
-    <br>
-    <br>
-    While we launch, try us out with your first month free, and receive free Mix Feedback with every master. Plus receive one bonus Mix Feedback every month for songs you're not ready to master. Start learning from professionals today!
+    With Mix Feedback, you get the detailed assistance of your mastering engineer with any mix level issues you are having, along with their professional opinion of your mix. This additional stage in the mastering process is a win-win: you get to stay in control and hone your mixing and recording skills, while we get to give you the absolute best master possible. <a href="#free">Try us out, with your first mix feedback free</a>.
+
   </div>
 
 
