html price panels

--- a/_includes/rates-podcasts.html
+++ b/_includes/rates-podcasts.html
@@ -16,10 +16,13 @@
  		We can help you mitigate clicks, pops, and hums in your dialogue, plus, included with our podcast mastering service is complimentary recording assistance. With recording assistance, we offer personalized tips to get you get the best recording possible and acheive professional quality recordings within your budget. <a href="#free">Try us out with your first podcast master on us</a>.
 		</p>
  </div>
+
+ {% include panels-podcasts.html %}
+
 <!-- 
       <div class="col-xs-2">
  </div> -->
-
+<!-- 
   <div class="col-md-5 col-xs-12" style="padding: 0% 0%; position: relative;">
 
 	<div class="col-xs-6" style="padding: 0% 4%; position: relative;">
@@ -32,7 +35,7 @@
 		<a class="btn btn-skin" style="width: 100%; height: 45px; font-size: 14px; padding-top: 10px;" href="/subscriptions/podcast-mastering/">Start</a>
 	</div>
 	
-  </div>
+  </div> -->
 
    <div class="col-md-1">
  </div>
