--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -26,8 +26,8 @@
    <div class="col-md-1">
    </div>
 
-
-
+ {% include panels-mix-feedback.html %}
+<!-- 
    <div class="col-md-5 col-xs-12" style="padding: 0%; position: relative;">
 
   <div class="col-xs-6" style="padding: 1% 4%; position: relative;">
@@ -40,7 +40,7 @@
     <a class="btn btn-default" style="width: 100%; background: #777; height: 45px; font-size: 14px; padding-top: 10px;" href="/subscriptions/mix-feedback/">Start</a>
   </div>
 
-  </div>
+  </div> -->
 
 <!--  <div class="col-xs-2">
  </div>
