--- a/_includes/rates.html
+++ b/_includes/rates.html
@@ -20,19 +20,7 @@
  </div>
 
 
-   <div class="col-md-5 col-xs-12" style="padding: 0%; position: relative;">
-
-  <div class="col-xs-6" style="padding: 1% 4%; position: relative;">
-    <img src="/img/rates/mastering-standard-panel.jpg" alt="value" width="100%">
-    <a class="btn btn-default" style="width: 100%; height: 45px; font-size: 14px; padding-top: 10px;" href="/payment/calculators/mastering/">Calculate your price</a>
-  </div>
-
-  <div class="col-xs-6" style="padding: 1% 4%; position: relative;">
-    <img src="/img/rates/mastering-plan-panel.jpg" alt="value" width="100%">
-    <a class="btn btn-default" style="width: 100%; height: 45px; font-size: 14px; padding-top: 10px;" href="/subscriptions/mastering/">Start</a>
-  </div>
-
-  </div>
+ {% include panels-mastering.html %}
 
 
 
