--- a/_includes/panels-podcasts.html
+++ b/_includes/panels-podcasts.html
@@ -24,7 +24,7 @@
     <div class="panel-price"><h3>$95</h3>
       <p><i>per month</i></p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p><b>3 podcasts masters per month</b></p></div>
+      <div class="panel-item"><p><b>3 podcast masters per month</b></p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Unlimited length</p></div>
       <div class="panel-divider"></div>
