--- a/_includes/header-services.html
+++ b/_includes/header-services.html
@@ -58,7 +58,7 @@
             <li><a href="#cleanup">Audio Cleanup</a></li>
             </ul>
         </li>
-        <li><a href="#reviews">Reviews</a></li>
+        <li><a href="/#reviews">Reviews</a></li>
         <li><a href="/examples/">Examples</a></li>
         <li><a href="/blog/">Blog</a></li>
         <li><a href="/login/">Login</a></li>
