--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -35,11 +35,11 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="hidden-xs hidden-sm hidden-md brand" href="/" align="right">
+                <a class="hidden-xs hidden-sm hidden-md brand" href="#free" align="right">
                     <h4 style="padding: 15px 20px 5px 0px; margin: 0px; text-transform: uppercase;">Get Mastered</h4>
                 </a>
 
-                <a class="hidden-lg hidden-xl brand" href="/" align="left">
+                <a class="hidden-lg hidden-xl brand" href="#free" align="left">
                     <h4 style="padding: 15px 20px 5px 0px; margin: 0px; text-transform: uppercase;">Get Mastered</h4>
                 </a>
 
@@ -58,7 +58,7 @@
             <li><a href="/services/#cleanup">Audio Cleanup</a></li>
             </ul>
         </li>
-        <li><a href="/services/#reviews">Reviews</a></li>
+        <li><a href="#reviews">Reviews</a></li>
         <li><a href="/examples/">Examples</a></li>
         <li><a href="/blog/">Blog</a></li>
         <li><a href="/login/">Login</a></li>
