--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -6,6 +6,7 @@
   <a href="/services/#mastering">Mastering</a> / 
     <a href="/services/#mix-feedback">Mix Feedback</a> / 
     <a href="/services/#cleanup">Audio Cleanup</a> / 
+    <a href="#reviews">Reviews</a> / 
     <a href="/blog/">Blog</a> / 
     <a href="/login/">Login</a>
     </p>
