language tweaks on services pages

--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -8,14 +8,14 @@
 
  <div class="col-md-5">
  	<div style="padding: 2% 4%; margin: 0% 0% 2% 0%;">
- 	<h1 style="margin-bottom: 5px; color: #eee;">Music Mastering</h1>
+ 	<h1 style="margin-bottom: 5px; color: #eee;">Mastering</h1>
  	<!-- <img src="/img/icons/master-icon.png"> -->
 
  	<p style="font-size: 16px; color: #eee;"><br>
- 		With Get Mastered, you don't just get a master. You get a personal mastering engineer who will work with you to make your music the best it can be. In addition to making your tracks louder, your albums cohesive, and your songs ready for release, our engineers take pride in artistically enhancing your track to fit your unique style and tastes.
-		<br>
-		<br>
-		We don't rush quality. We take time to listen to and understand your track, so that we can bring it to its full potential. If you do absolutely need a rush job, we are happy to work with you at no extra cost. <b>Try our mastering for free by entering your email below</b>.
+ 		With Get Mastered, you get a personal mastering engineer who will work with you to make your music the best it can be. In addition to making your tracks loud, cohesive, and ready for release, our engineers take pride in understanding your unique style to enhance your music without compromising your signature sound. Each song we master gets a full week of our attention and listening through different devices, so you can be sure your mix will sound fantastic on every device. 
+ 		<br>
+ 		<br>
+ 		<b>Try our mastering for free by entering your email below</b>.
 		</p>
 
 		{% include email-submission-form-mast.html %}
