--- a/_includes/panels-cleanup.html
+++ b/_includes/panels-cleanup.html
@@ -10,7 +10,7 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Unlimited length</p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>Unlimited revisions</p></div>
+      <div class="panel-item"><p>Up to 5 revisions</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Pay as you go</p></div>
       <a class="btn btn-default btn-panel" href="/payment/calculators/audio-cleanup/"><h3>Calculate price</h3></a>
@@ -19,14 +19,14 @@
 
   <div class="col-xs-6 panel-holder">
     <div class="panel-header-green row-equal"><h3>Audio Cleanup<br>Plan</h3></div>
-    <div class="panel-price"><h3>$95</h3>
+    <div class="panel-price"><h3>$195</h3>
       <p><i>per month</i></p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p><b>3 audio cleanups per month</b></p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>Unlimited length</p></div>
+      <div class="panel-item"><p>Up to 1 hour in length each</p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>Unlimited revisions</p></div>
+      <div class="panel-item"><p>Up to 5 revisions</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Cancel anytime</p></div>
       <a class="btn btn-default btn-panel" href="/subscriptions/audio-cleanup/"><h3>Start</h3></a>
