--- a/_includes/panels-mix-feedback.html
+++ b/_includes/panels-mix-feedback.html
@@ -6,7 +6,7 @@
     <div class="panel-price"><h3>$19</h3>
       <p><i>per mix</i></p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p><b>1 Mix Feedback</b><br></p></div>
+      <div class="panel-item"><p><b>1 Mix Feedback Report</b><br></p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>No monthly<br>commitment</p></div>
       <div class="panel-divider"></div>
@@ -22,7 +22,7 @@
     <div class="panel-price"><h3>$17</h3>
       <p><i>per month</i></p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p><b>1 Mix Feedback per month</b></p></div>
+      <div class="panel-item"><p><b>1 Mix Feedback Report per month</b></p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Mix Feedback<br>with every master</p></div>
       <div class="panel-divider"></div>
