--- a/_includes/rates-mix-feedback.html
+++ b/_includes/rates-mix-feedback.html
@@ -16,10 +16,10 @@
 
   <p style="font-size: 16px; color: #333; text-shadow: 0px 0px 10px #ccc;"><br>
 
-    Amazing music doesn't start at the mastering stage. That is why we offer Mix Feedback, giving you access to your mastering engineer during your mixing process.
+    With mix feedback, you get a detailed report from your mastering engineer with any mix level issues you are running into, along with their professional assessment of your mix. Our mix feedback report includes a breakdown of different aspects of your track, from EQ, to stereo placement, and everything else. Through mix feedback, you get to stay in control and hone your own mixing and recording skills, and become confident in your sound.
     <br>
     <br>
-    With Mix Feedback, you get the detailed assistance of your mastering engineer with any mix level issues you are having, along with their professional opinion of your mix. This additional stage in the mastering process is a win-win: you get to stay in control and hone your mixing and recording skills, while we get to give you the absolute best master possible. <b>Try our mix feedback for free by entering your email below</b>.</p>
+    <b>Try our mix feedback for free by entering your email below</b>.</p>
 
     {% include email-submission-form-mix.html %}
 
@@ -58,12 +58,12 @@
 
  <!--  <img src="/img/icons/mix-icon.png"> -->
 
-  <p style="font-size: 16px; color: #333;"><br>
+  <p style="font-size: 16px; color: #333; text-shadow: 0px 0px 10px #ccc;"><br>
 
-    Amazing music doesn't start at the mastering stage. That is why we offer Mix Feedback, giving you access to your mastering engineer during your mixing process.
+    With mix feedback, you get a detailed report from your mastering engineer with any mix level issues you are running into, along with their professional assessment of your mix. Our mix feedback report includes a breakdown of different aspects of your track, from EQ, to stereo placement, and everything else. Through mix feedback, you get to stay in control and hone your own mixing and recording skills, and become confident in your sound.
     <br>
     <br>
-    With Mix Feedback, you get the detailed assistance of your mastering engineer with any mix level issues you are having, along with their professional opinion of your mix. This additional stage in the mastering process is a win-win: you get to stay in control and hone your mixing and recording skills, while we get to give you the absolute best master possible. <b>Try our mix feedback for free by entering your email below</b>.</p>
+    <b>Try our mix feedback for free by entering your email below</b>.</p>
 
     {% include email-submission-form-mix.html %}
 
