icon change, blog sidebar changes

--- a/_includes/rates-audio-cleanup.html
+++ b/_includes/rates-audio-cleanup.html
@@ -15,7 +15,7 @@
  		We know that often, podcasts, interviews, lectures, and other dialogue are recorded in a less than ideal environment. Our audio cleanup service removes background noise and recording artifacts, leaving every word audible and clear. We also balance levels between different speakers, to make your dialogue even, consistent, and intelligible.
  		<br>
  		<br>
- 		<b>Try our podcast mastering for free by entering your email below</b>.
+ 		<b>Try our audio cleanup for free by entering your email below</b>.
 
 		</p>
 
