--- a/_includes/offer.html
+++ b/_includes/offer.html
@@ -103,12 +103,13 @@ function audioPlayPause(){
   <p>While we launch, try out one of our services free of charge</p>
   <br>
 
+
   <div class="col-md-4">
     <a href="/services/#mix-feedback">
     <div class="service-panel">
     <h3>Mix Feedback</h3>
     <p>With mix feedback, you get a detailed breakdown of how you can improve your mix, along with solutions to any specific problems you are running into. Find out more by clicking here.</p>
-    <img src="/img/icons/speech.png">
+    <img src="/img/icons/mix.png">
     <br><br>
     <h4>Try now free</h4>
     </div>
@@ -140,6 +141,12 @@ function audioPlayPause(){
     </div>
     </a>
   </div>
+
+<!--   <div class="col-lg-12">
+  <br>
+  {% include email-submission-form-landing.html %}
+  <br>
+  </div> -->
   
 
   <div class="col-lg-12">
