--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,33 +8,28 @@
 <br>
 <br> -->
 
-<h5 style="color: #777; display: inline; text-transform: uppercase;">
+<h5 class="sidebar-head">
     What is Get Mastered?
 </h5>
 
-<p style="color: #999; font-size: 15px; padding-top: 5px;">
-Get Mastered is an audio consultation and mastering service with mix and recording feedback - 
+<p class="sidebar-text">
+Get Mastered is an audio enhancement and mastering service - 
 
-<span><a href="/blog/about/What-Is-Get-Mastered/" style="color: #aaa;">Learn more.</a><br></p>
+<span><a href="/blog/about/What-Is-Get-Mastered/" class="sidebar-text">Learn more.</a><br></p>
 
 
-<br><h5 style="color: #777; display: inline; text-transform: uppercase;">
+<br><h5 class="sidebar-head">
     Who Are we?</h5>
 
-<p style="color: #999; font-size: 15px; padding-top: 5px;">
+<p class="sidebar-text">
 We are passionate engineers who believe in amazing sounding audio - 
-<span><a href="/blog/about/Who-We-Are/" style="color: #aaa;">More about us</a>
-<br><br></p>
+<span><a href="/blog/about/Who-We-Are/" class="sidebar-text">More about us</a>
+<br></p>
 
 
 
-<h5 style="color: #777; display: inline; text-transform: uppercase;">
-    <a href="/">Try us out for free</a><br><br><br>
-</h5>
 
-
-
-<h5 style="color: #777; display: inline; text-transform: uppercase;">Learn about</h5>
+<!-- <h5 style="color: #777; display: inline; text-transform: uppercase;">Learn about</h5>
 
 
 <p style="color: #999; font-size: 15px; padding: 5px 0px 0px 0px;">
@@ -48,19 +43,26 @@ We are passionate engineers who believe in amazing sounding audio -
     </a>
 {% endfor %}
 
-</p>
+</p> -->
+<!-- 
+<h5 class="sidebar-head">Search the blog<br><br></h5> -->
 
- <form action="{{ '/search' | prepend: site.baseurl }}" method="GET" style="padding: 0px 0px 10px 20px;">
+<a class="sidebar-text" href="/archive/index.html">Explore blog archive</a><br><br>
+
+ <form action="{{ '/search' | prepend: site.baseurl }}" method="GET" style="padding: 0px 0px 10px 0px; margin: 0px;">
  		<!-- <label style="font-size: 17px;" for="query">Search:  </label> --> 
-              <input style="font-size: 13px;" type="text" name="query" placeholder="Or, search a term">
+              <input style="font-size: 14px;" type="text" name="query" placeholder="Or, search a topic">
+              <input class="btn btn-skin btn-search" type="submit" value="Search">
             </form>
 
-            <br>
 
 
 
+<h5 class="sidebar-head">
+    <a href="/">Try us out for free</a><br><br>
+</h5>
 
-<br>
+
 
             <!-- <h4 style="color: #777; display: inline; text-transform: uppercase;">
     Get Social
@@ -75,6 +77,6 @@ We are passionate engineers who believe in amazing sounding audio -
 <br>
 <br> -->
 
-<!-- <p style="color: #000;"> <a style="font-size: 15px; color:#999;" href="/archive/index.html">Full Archive</a></p> -->
+
 
 </section>
