example page update

--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -22,6 +22,13 @@
 
 		<br>
 		<br>
+		<br>
+		
+		<p>
+		<a href="/examples/">Listen to some examples of what we can do to your music here</a>
+		</p>
+		<br>
+		<br>
 		
 	</div>
  </div>
