--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -16,7 +16,7 @@
             <br> -->
             <p style="font-size: 120%; color: #333; font-weight: 300;">
 
-            <i>"The mix feedback Keenan gave me was superb. He didn't just give me advice that improved that one song but he was also able to take my mixing technique to a whole new level, resulting in an improvement on all the other songs I was working on. Such assistance is invaluable, I would recommend everyone to go and try it!"</i> - Naumm
+            <i>"The mix feedback Keenan gave me was superb. He didn't just give me advice that improved that one song but he was also able to take my mixing technique to a whole new level, resulting in an improvement on all the other songs I was working on. Such assistance is invaluable, I would recommend everyone to go and try it!"</i> - Naumn
             <br>
             <br>
 
