--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -49,15 +49,9 @@
             <div class="collapse navbar-collapse navbar-left navbar-main-collapse col-sm-8">
       <ul class="nav navbar-nav" style="text-align: left;">
         <!-- <li><a href="#about">About</a></li> -->
-        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Services
-        <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-            <li><a href="/services/#mastering">Mastering</a></li>
-            <li><a href="/services/#mix-feedback">Mix Feedback</a></li>
-            <li><a href="/services/#cleanup">Audio Cleanup</a></li>
-            </ul>
-        </li>
+        <li><a href="/services/mix-feedback/">Mix Feedback</a></li>
+            <li><a href="/services/mastering/">Mastering</a></li>
+            <li><a href="/services/audio-cleanup/">Audio Cleanup</a></li>
         <li><a href="#reviews">Reviews</a></li>
         <li><a href="/examples/">Examples</a></li>
         <li><a href="/blog/">Blog</a></li>
