--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
 <div class="row equal bg-white" style="padding: 0px; margin: 0px;">
   
-  <div class="col-lg-12 bg-white" style="padding: 0px 250px;">
+  <div class="col-lg-12 bg-white" style="padding: 0% 10%;">
     <div class="row-fluid" style="color: #000;">
       {{ content }}
     </div>
