--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,37 @@
 {% include header.html %}
 
-<div style="padding: 40px; margin: 0px;">
+<div style="padding: 0px; margin: 0px;">
+  <div class="col-lg-3 sidebar hidden-md hidden-sm hidden-xs" style="padding: 0px; margin: 0px;">
+    <!-- data-spy="affix" -->
+    <div  data-offset-top="0" style="padding: 0px 30px 0px 0px; margin-top: 75px;">
+    <div>
+      {% include sidebar-home.html %}
     </div>
 
-<div class="row equal bg-white" style="padding: 0px; margin: 0px;">
-  
-  <div class="col-lg-12 bg-white" style="padding: 0% 10%;">
-    <div class="row-fluid" style="color: #000;">
+    </div>
+  </div>
+  <div class="col-lg-6" style="padding-top: 0px; padding-left: 20px; padding-right: 20px;">
+
+    <div class="row-fluid bg-white" style="padding: 35px 0px;">
+    </div>
+
+
+    <div class="row-fluid bg-white">
+      <br>
+      <div class="hidden-lg hidden-xl">
       {{ content }}
+      </div>
+      <div class="hidden-md hidden-sm hidden-xs" style="padding-right: 8%;">
+      {{ content }}
+      </div>
     </div>
-	</div>
+  </div>
 
+    </div>
+  </div>
+  <div class="col-lg-3 sidebar hidden-md hidden-sm hidden-xs" style="padding: 60px 0px; margin: 0px;">
+    {% include sidebar-right.html %}
+  </div>
 </div>
 
-
-{% include footer-splash.html %}
-
-
+{% include footer-post.html %}
