--- a/_includes/offer.html
+++ b/_includes/offer.html
@@ -107,6 +107,7 @@ function audioPlayPause(){
   <div class="col-md-4">
     <a href="/services/mix-feedback/">
     <div class="service-panel">
+      <h5>For Engineers</h5>
     <h3>Mix Feedback</h3>
     <p>With mix feedback, you get a detailed breakdown of how you can improve your mix, along with solutions to any specific problems you are running into. Find out more by clicking here.</p>
     <img src="/img/icons/mix.png" height="75">
@@ -120,6 +121,7 @@ function audioPlayPause(){
   <div class="col-md-4">
     <a href="/services/mastering/">
     <div class="service-panel">
+      <h5>For Musicians</h5>
     <h3>Music Mastering</h3>
     <p>Make your music cohesive, clear, and balanced on any system through our collaborative mastering process. Bring your music to the level of the artists you admire by clicking here.</p>
     <img src="/img/icons/cd.png" height="75">
@@ -133,6 +135,7 @@ function audioPlayPause(){
   <div class="col-md-4">
     <a href="/services/audio-cleanup/">
     <div class="service-panel">
+      <h5>For Podcasters</h5>
     <h3>Audio Cleanup</h3>
     <p>Restore problematic dialogue recordings to sound clear, audible, and natural. Whether you're working on a podcast, lecture, interview, or historical recording, click here to learn how we can help you.</p>
     <img src="/img/icons/mic.png" height="75">
