--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,8 +58,8 @@
     <div class="row-fluid hidden-xl hidden-lg" style="background: url({{ page.cover }}) no-repeat center center;   background-size: cover; padding: 40%; filter        : brightness(50%);
     -webkit-filter: brightness(50%); z-index: -1;" ></div>
 
-          <h1 class="hidden-xs hidden-sm hidden-md" style="padding-left: 2%; position: absolute; top: 140px;"><span style="font-size: 20px; color: #aaa; text-transform: uppercase;">{{ page.subtitle }}</span><br><span style="font-size: 200%; text-transform: uppercase; color: #fff;">{{ page.title }}<br><br><br><br></span></h1>
-          <h1 class="hidden-xl hidden-lg"style="padding-left: 2%; position: absolute; top: 140px;"><span style="font-size: 20px; color: #aaa; text-transform: uppercase;">{{ page.subtitle }}</span><br><span style="text-transform: uppercase; color: #fff;">{{ page.title }}<br><br><br><br></span></h1>
+          <h1 class="hidden-xs hidden-sm hidden-md" style="padding-left: 2%; position: absolute; top: 140px;"><span style="font-size: 18px; color: #aaa; text-transform: uppercase;">{{ page.subtitle }}</span><br><span style="font-size: 120%; text-transform: uppercase; color: #fff;">{{ page.title }}<br><br><br><br></span></h1>
+          <h1 class="hidden-xl hidden-lg"style="padding-left: 2%; position: absolute; top: 140px;"><span style="font-size: 20px; color: #aaa; text-transform: uppercase;">{{ page.subtitle }}</span><br><span style="text-transform: uppercase; color: #fff; font-size: 100%;">{{ page.title }}<br><br><br><br></span></h1>
 <!-- 
 
     <div class="row-fluid">
