--- a/_includes/sidebar-home.html
+++ b/_includes/sidebar-home.html
@@ -40,9 +40,9 @@
 
 
 
-<h5 class="sidebar-head">
+<!-- <h5 class="sidebar-head">
     <a href="/">Try us out for free</a><br><br>
-</h5>
+</h5> -->
 
 
 
