--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -49,10 +49,10 @@
 
 
 
-<h5 class="sidebar-head">
+<!-- <h5 class="sidebar-head">
     <a href="/">Try us out for free</a><br><br>
 </h5>
-
+ -->
 
 
 </section>
