--- a/_includes/email-submission-form-mix.html
+++ b/_includes/email-submission-form-mix.html
@@ -11,7 +11,7 @@
                                <input type="hidden" name="_subject" value="Mix Feedback Free Submission" /></div>
                         </div>
                     </div>
-                    <input type="hidden" name="_next" value="/thank-you" />
+                    <input type="hidden" name="_next" value="/submit/mix-feedback/" />
                     <div class="col-md-1">
                         <button type="submit" class="btn btn-skin" id="btnContactUs">
                             Try Free</button>
