no link to bottom of post

--- a/_includes/social-media.html
+++ b/_includes/social-media.html
@@ -11,6 +11,9 @@
 <i>Founder, engineer, and voice behind most of these blog posts</i>
 
 </a> 
+<br>
+<br>
+<a href="#page-top">Back to top of post</a>
 </p>
 
 
