internal link bugs fixed

--- a/_includes/panels-mix-feedback.html
+++ b/_includes/panels-mix-feedback.html
@@ -8,8 +8,6 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p><b>1 mix feedback report</b><br></p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>No monthly<br>commitment</p></div>
-      <div class="panel-divider"></div>
       <div class="panel-item"><p>72 hour turnaround</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Pay as you go</p></div>
@@ -24,9 +22,9 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p><b>1 mix feedback report per month</b></p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>Mix feedback<br>with every master</p></div>
-      <div class="panel-divider"></div>
       <div class="panel-item"><p>48 hour turnaround</p></div>
+      <div class="panel-divider"></div>
+      <div class="panel-item"><p>Great for growing your skills</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Cancel any time</p></div>
       <a class="btn btn-default btn-panel" href="/subscriptions/mix-feedback/"><h3>Start</h3></a>
