--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,6 @@
 
 <div style="padding: 0px; margin: 0px;">
   <div class="col-lg-3 sidebar hidden-md hidden-sm hidden-xs" style="padding: 0px; margin: 0px;">
-    <!-- data-spy="affix" -->
     <div  data-offset-top="0" style="padding: 0px 30px 0px 0px; margin-top: 75px;">
     <div>
       {% include sidebar.html %}
@@ -74,10 +73,7 @@
 
     <div class="row-fluid bg-white">
       <br>
-      <div class="hidden-lg hidden-xl">
-      {{ content }}
-      </div>
-      <div class="hidden-md hidden-sm hidden-xs" style="padding-right: 8%;">
+      <div>
       {{ content }}
       </div>
       {% include social-media.html %}
