--- a/_includes/rates-mix-feedback.html
+++ b/_includes/rates-mix-feedback.html
@@ -18,10 +18,13 @@
 
   <p style="font-size: 16px; color: #333; text-shadow: 0px 0px 10px #ccc;"><br>
 
-    With mix feedback, you get a detailed report from our mastering engineers with any mix level issues you are running into, along with their professional assessment of your mix. Our mix feedback report includes a breakdown of different aspects of your track, from EQ, to stereo placement, and everything else. Through mix feedback, you get to stay in complete control and hone your own mixing and recording skills to become confident in your sound.
+    <b>Want some experienced ears on your music?</b>
     <br>
     <br>
-    <b>Try our mix feedback for free by entering your email below</b>.
+    With mix feedback, you get a detailed report from our mastering engineers with their professional assessment of your mix, along with solutions to any specific problems you are having with your mix. Our mix feedback report includes a breakdown of different aspects of your track, from EQ, to arrangement, and everything in between, to help you improve your mixes, recordings, and - even more importantly - your production prowess. Through mix feedback, you get to stay in complete control of your sound and bring your own mixing and recording skills to perfection.
+    <br>
+    <br>
+    <b>Get your first mix feedback report, on us, by entering your email below</b>.
     <br>
     <br>
   </p>
