--- a/_includes/sidebar-home.html
+++ b/_includes/sidebar-home.html
@@ -41,7 +41,7 @@
 
 
 <h5 class="sidebar-head">
-    <a href="/">Try us out for free</a><br><br>
+    <a href="/#about">Try us out for free</a><br><br>
 </h5>
 
 
