--- a/_includes/social-media.html
+++ b/_includes/social-media.html
@@ -25,4 +25,9 @@
 	<div class="fb-share-button" data-href="http://getmastered.com{{ page.url }}" data-layout="button" style="padding: 0px 15px 0px 15px;">
 	</div>
 
+	<br><br><br><br>
+
+
+	{% include mailing-list-signup.html %}
+
 
